library/general/uniqueserviceselector/example.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatekeeper-test-service
  namespace: gatekeeper-system
spec:
  ports:
    - port: 443
  selector:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
